--- a/slides/index.html
+++ b/slides/index.html
@@ -41,17 +41,16 @@
 					<section>
 						<h3>AI 实战班</h3>
 						<ol>
-							<li><a href="javascript-and-web-programming.html">Web 服务器、浏览器及相关协议</a></li>
-							<li><a href="javascript-and-web-programming.html">JavaScript 及网页编程</a></li>
-							<li><a href="javascript-updating-webpage.html">Web 前端编程基础</a></li>
-							<li><a href="javascript-using-canvas.html">流行 Web 前端框架</a></li>
-							<li><a href="javascript-comprehensive-exercise.html">JavaScript 大作业</a></li>
-							<li><a href="collaborative-software-development.html">基于 Git 的协作式软件开发</a></li>
-							<li><a href="design-of-architecture.html">大作业需求分析及架构设计</a></li>
-							<li><a href="user-account-management.html">用户账号管理及登录界面</a></li>
-							<li><a href="web-socekt-server-and-client.html">WebSocket 服务器及客户端</a></li>
-							<li><a href="setting-up-ai-large-language-model.html">架设开源 AI 大模型</a></li>
-							<li><a href="bash-shell-programming.html">Bash Shell 编程及服务器运维</a></li>
+							<li><a href="fullstack-basic-of-web.html">Web 相关背景知识</a></li>
+							<li><a href="fullstack-setting-up-linux-server.html">架设 Linux 服务器</a></li>
+							<li><a href="fullstack-javascript-language.html">JavaScript 编程语言</a></li>
+							<li><a href="fullstack-web-programming.html">Web 前端开发</a></li>
+							<li><a href="fullstack-web-programming-exercise.html">网页前端综合练习及专题辅导</a></li>
+							<li><a href="fullstack-collaborative-development-based-on-github.html">基于 Git 的协作式软件开发</a></li>
+							<li><a href="fullstack-open-source-ai-llm.html">开源 AI 大模型</a></li>
+							<li><a href="fullstack-project-design.html">大作业需求分析及架构设计</a></li>
+							<li><a href="fullstack-project-coaching.html">大作业专题辅导</a></li>
+							<li><a href="fullstack-deploying-and-operations.html">服务的部署和运维</a></li>
 						<ol>
 					</section>
 					<section>
@@ -63,6 +62,20 @@
 							<li><a href="cpp-class-and-oop.html">C++ 面向对象编程</a></li>
 							<li><a href="cpp-project.html">C++ 大作业及相关知识点</a></li>
 							<li><a href="cpp-project-coaching.html">C++ 大作业辅导</a></li>
+						</ol>
+					</section>
+						<h3>信奥初级班</h3>
+						<ol>
+							<li><a href="noijunior-cpp-advanced-features.html">C++ 编程语言的高级特性</a></li>
+							<li><a href="noijunior-basic-algorithms.html">基础算法</a></li>
+							<li><a href="noijunior-linear-data-structures.html">线性数据结构</a></li>
+							<li><a href="noijunior-tree-data-structures.html">树型数据结构</a></li>
+							<li><a href="noijunior-midterm-project.html">中期大作业</a></li>
+							<li><a href="noijunior-search-algorithms.html">搜索算法</a></li>
+							<li><a href="noijunior-graph-and-graph-theory.html">图及图论算法</a></li>
+							<li><a href="noijunior-other-data-structures.html">其他算法和数据结构</a></li>
+							<li><a href="noijunior-term-project.html">结业大作业</a></li>
+							<li><a href="noijunior-csp-exercises.html">CSP-J 真题演练</a></li>
 						</ol>
 					</section>
 					<section>
