--- a/slides/index.html
+++ b/slides/index.html
@@ -64,6 +64,7 @@
 							<li><a href="cpp-project-coaching.html">C++ 大作业辅导</a></li>
 						</ol>
 					</section>
+					<section>
 						<h3>信奥初级班</h3>
 						<ol>
 							<li><a href="noijunior-cpp-advanced-features.html">C++ 编程语言的高级特性</a></li>
@@ -76,6 +77,21 @@
 							<li><a href="noijunior-other-data-structures.html">其他算法和数据结构</a></li>
 							<li><a href="noijunior-term-project.html">结业大作业</a></li>
 							<li><a href="noijunior-csp-exercises.html">CSP-J 真题演练</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>信奥提高班</h3>
+						<ol>
+							<li><a href="noisenior-cpp-advanced-features.html">C++ 编程语言的高级特性</a></li>
+							<li><a href="noisenior-string-algorithms.html">字符串相关算法</a></li>
+							<li><a href="noisenior-memory-management.html">通用操作系统的内存管理</a></li>
+							<li><a href="noisenior-tree-data-structures.html">树型数据结构</a></li>
+							<li><a href="noisenior-midterm-project.html">中期大作业</a></li>
+							<li><a href="noisenior-search-algorithms.html">搜索算法</a></li>
+							<li><a href="noisenior-dynamic-programming.html">动态规划</a></li>
+							<li><a href="noisenior-other-theories.html">其他理论知识</a></li>
+							<li><a href="noisenior-term-project.html">结业大作业</a></li>
+							<li><a href="noisenior-csp-exercises.html">CSP-S 真题演练</a></li>
 						</ol>
 					</section>
 					<section>
