--- a/slides/index.html
+++ b/slides/index.html
@@ -95,29 +95,19 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员的数学素养</h3>
+						<h3>信奥科学素养</h3>
 						<ol>
-							<li><a href="math-arithmetic.html">算术：探究机械计算的方法</a></li>
+							<li><a href="math-arithmetic.html">探究机械计算的方法</a></li>
 							<li><a href="math-end-on-system.html">进制及进制转换</a></li>
 							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
-							<li><a href="math-primes.html">有趣的整数：亲和数、平方数以及斐波那契数列</a></li>
-							<li><a href="math-primes.html">质数：质数的判定以及合数的质数分解</a></li>
-							<li><a href="math-rational-numbers.html">有理数：如何找到任意有理数的最简分数表达</a></li>
-							<li><a href="math-irrational-numbers-square-root-of-2.html">无理数：如何计算二的平方根</a></li>
-							<li><a href="math-irrational-numbers-pi.html">无理数：计算圆周率的若干种方法</a></li>
-							<li><a href="math-irrational-numbers-natural-constant.html">无理数：自然常数</a></li>
-						</ol>
-					</section>
-					<section>
-						<h3>计算机科学素养</h3>
-						<ol>
-							<li><a href="other-programming-languages.html">其他编程语言长什么样？</a></li>
-							<li><a href="icsm-why-choose-binary.html">为什么选择二进制？</a></li>
-							<li><a href="icsm-binary-arithmetic.html">二进制运算</a></li>
-							<li><a href="icsm-numbers.html">数值：整数和实数</a></li>
-							<li><a href="icsm-text.html">文字：字符集及编码</a></li>
-							<li><a href="icsm-multimedia.html">多媒体：图像、图形及音视频</a></li>
-							<li><a href="icsm-structured-data.html">结构化数据</a></li>
+							<li><a href="math-integers.html">亲和数、平方数以及斐波那契数列</a></li>
+							<li><a href="math-primes.html">质数的判定以及合数的质数分解</a></li>
+							<li><a href="math-rational-numbers.html">如何确定任意有理数的最简分数表达</a></li>
+							<li><a href="math-irrational-numbers-square-root-of-2.html">如何计算二的平方根</a></li>
+							<li><a href="math-irrational-numbers-pi.html">计算圆周率的若干种方法</a></li>
+							<li><a href="math-irrational-numbers-natural-constant.html">自然常数</a></li>
+							<li><a href="icsm-charset-and-encoding.html">字符集及文字的编码</a></li>
+							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
 						</ol>
 					</section>
 					<section>
