--- a/slides/index.html
+++ b/slides/index.html
@@ -95,7 +95,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信奥科学素养</h3>
+						<h3>计算机科学素养</h3>
 						<ol>
 							<li><a href="math-arithmetic.html">探究机械计算的方法</a></li>
 							<li><a href="math-end-on-system.html">进制及进制转换</a></li>
