--- a/slides/index.html
+++ b/slides/index.html
@@ -100,7 +100,7 @@
 							<li><a href="math-arithmetic.html">探究机械计算的方法</a></li>
 							<li><a href="math-end-on-system.html">进制及进制转换</a></li>
 							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
-							<li><a href="math-integers.html">亲和数、平方数以及斐波那契数列</a></li>
+							<li><a href="math-integers.html">整数的性质以及斐波那契数列</a></li>
 							<li><a href="math-primes.html">质数的判定以及合数的质数分解</a></li>
 							<li><a href="math-rational-numbers.html">如何确定任意有理数的最简分数表达</a></li>
 							<li><a href="math-irrational-numbers-square-root-of-2.html">如何计算二的平方根</a></li>
