--- a/slides/index.html
+++ b/slides/index.html
@@ -95,9 +95,9 @@
 						</ol>
 					</section>
 					<section>
-						<h3>计算机科学素养</h3>
+						<h3>程序员的数学素养</h3>
 						<ol>
-							<li><a href="math-arithmetic.html">探究机械计算的方法</a></li>
+							<li><a href="math-number-system.html">数系：从自然数到实数</a></li>
 							<li><a href="math-end-on-system.html">进制及进制转换</a></li>
 							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
 							<li><a href="math-integers.html">整数的性质以及斐波那契数列</a></li>
@@ -106,6 +106,7 @@
 							<li><a href="math-irrational-numbers-square-root-of-2.html">如何计算二的平方根</a></li>
 							<li><a href="math-irrational-numbers-pi.html">计算圆周率的若干种方法</a></li>
 							<li><a href="math-irrational-numbers-natural-constant.html">自然常数</a></li>
+							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
 							<li><a href="icsm-charset-and-encoding.html">字符集及文字的编码</a></li>
 							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
 						</ol>
