--- a/slides/index.html
+++ b/slides/index.html
@@ -98,9 +98,9 @@
 						<h3>程序员的数学素养</h3>
 						<ol>
 							<li><a href="math-number-system.html">数系：从自然数到实数</a></li>
-							<li><a href="math-end-on-system.html">进制及进制转换</a></li>
-							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
+							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
 							<li><a href="math-integers.html">整数的性质以及斐波那契数列</a></li>
+							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
 							<li><a href="math-primes.html">质数的判定以及合数的质数分解</a></li>
 							<li><a href="math-rational-numbers.html">如何确定任意有理数的最简分数表达</a></li>
 							<li><a href="math-irrational-numbers-square-root-of-2.html">如何计算二的平方根</a></li>
