--- a/slides/index.html
+++ b/slides/index.html
@@ -99,7 +99,7 @@
 						<ol>
 							<li><a href="math-number-system.html">数系：从自然数到实数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
-							<li><a href="math-integers.html">整数的性质</a></li>
+							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
 							<li><a href="math-fibonacci-numbers.html">斐波那契数列</a></li>
 							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
 							<li><a href="math-primes.html">质数的判定以及合数的质数分解</a></li>
