--- a/slides/math-integers.html
+++ b/slides/math-integers.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>程序员的数学素养 - 有趣的整数：亲和数、平方数以及斐波那契数列</title>
+		<title>程序员的数学素养 - 数论基础：整数的性质</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -14,7 +14,7 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">有趣的整数：亲和数、平方数以及斐波那契数列</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">数论基础：整数的性质</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
 			</header>
 			<div class="slides">
