--- a/slides/index.html
+++ b/slides/index.html
@@ -97,7 +97,7 @@
 					<section>
 						<h3>程序员的数学素养</h3>
 						<ol>
-							<li><a href="math-number-system.html">数系：从自然数到实数</a></li>
+							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
 							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
 							<li><a href="math-fibonacci-numbers.html">斐波那契数列</a></li>
