--- a/slides/fullstack-web-programming-exercise.html
+++ b/slides/fullstack-web-programming-exercise.html
@@ -15,7 +15,7 @@
 		<div class="reveal">
 			<header class="mytitle">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">网页前端综合练习及专题辅导</a></p>
-				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
+				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides">
 				<section data-markdown="gitlab/fullstack-web-programming-exercise.md"
