--- a/slides/index.html
+++ b/slides/index.html
@@ -15,7 +15,7 @@
 		<div class="reveal">
 			<header class="mytitle">
 				<p><a href="/">考鼎<span>&reg;</span>学堂：魏永明系列课程</a> / PLZS</p>
-				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
+				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides">
 				<section>
