--- a/slides/math-rational-numbers.html
+++ b/slides/math-rational-numbers.html
@@ -15,7 +15,7 @@
 		<div class="reveal">
 			<header class="mytitle">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">有理数：如何找到任意有理数的最简分数表达</a></p>
-				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
+				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides">
 				<section data-markdown="gitlab/math-rational-numbers.md"
