--- a/slides/using-linux-desktop-system.html
+++ b/slides/using-linux-desktop-system.html
@@ -15,7 +15,7 @@
 		<div class="reveal">
 			<header class="mytitle">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">使用 Linux 桌面系统</a></p>
-				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">报名：视频号主页 &gt; 客服</a></p>
+				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides">
 				<section data-markdown="gitlab/using-linux-desktop-system.md"
