--- a/slides/index.html
+++ b/slides/index.html
@@ -95,19 +95,32 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员的数学素养</h3>
+						<h3>程序员的数学素养：数值</h3>
 						<ol>
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
 							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
-							<li><a href="math-fibonacci-numbers.html">斐波那契数列</a></li>
+							<li><a href="math-primes.html">质数的有趣性质及质数定理</a></li>
+							<li><a href="math-common-irrational-numbers.html">常见无理数及其计算</a></li>
 							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
-							<li><a href="math-primes.html">质数的判定以及合数的质数分解</a></li>
+							<li><a href="math-fibonacci-numbers.html">黄金分割比和斐波那契数列</a></li>
 							<li><a href="math-rational-numbers.html">如何确定任意有理数的最简分数表达</a></li>
 							<li><a href="math-irrational-numbers-square-root-of-2.html">如何计算二的平方根</a></li>
-							<li><a href="math-irrational-numbers-pi.html">计算圆周率的若干种方法</a></li>
 							<li><a href="math-irrational-numbers-natural-constant.html">自然常数</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>程序员的数学素养：几何及计算</h3>
+						<ol>
 							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
+							<li><a href="math-irrational-numbers-pi.html">圆周率及其计算</a></li>
+							<li><a href="icsm-charset-and-encoding.html">字符集及文字的编码</a></li>
+							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>程序员的数学素养：编解码</h3>
+						<ol>
 							<li><a href="icsm-charset-and-encoding.html">字符集及文字的编码</a></li>
 							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
 						</ol>
