--- a/slides/index.html
+++ b/slides/index.html
@@ -95,12 +95,13 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员的数学素养：数值</h3>
+						<h3>程序员的数学素养：计算篇</h3>
 						<ol>
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
 							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
 							<li><a href="math-primes.html">质数的有趣性质及质数定理</a></li>
+							<li><a href="math-calculus-and-infinite-series.html">微积分及无穷级数</a></li>
 							<li><a href="math-common-irrational-numbers.html">常见无理数及其计算</a></li>
 							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
 							<li><a href="math-fibonacci-numbers.html">黄金分割比和斐波那契数列</a></li>
