--- a/slides/index.html
+++ b/slides/index.html
@@ -101,28 +101,40 @@
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
 							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
 							<li><a href="math-primes.html">质数的有趣性质及质数定理</a></li>
-							<li><a href="math-calculus-and-infinite-series.html">微积分及无穷级数</a></li>
-							<li><a href="math-common-irrational-numbers.html">常见无理数及其计算</a></li>
-							<li><a href="math-binary-arithmetic.html">二进制运算及实数的计算机表达</a></li>
-							<li><a href="math-fibonacci-numbers.html">黄金分割比和斐波那契数列</a></li>
-							<li><a href="math-rational-numbers.html">如何确定任意有理数的最简分数表达</a></li>
-							<li><a href="math-irrational-numbers-square-root-of-2.html">如何计算二的平方根</a></li>
-							<li><a href="math-irrational-numbers-natural-constant.html">自然常数</a></li>
-						</ol>
-					</section>
-					<section>
-						<h3>程序员的数学素养：几何及计算</h3>
-						<ol>
-							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
+							<li><a href="math-calculus.html">微积分基础</a></li>
+							<li><a href="math-infinite-series.html">无穷级数</a></li>
+							<li><a href="math-algebraic-irrational-numbers.html">代数无理数的计算</a></li>
+							<li><a href="math-golden-ratio-and-fibonacci-numbers.html">黄金分割比和斐波那契数列</a></li>
 							<li><a href="math-irrational-numbers-pi.html">圆周率及其计算</a></li>
-							<li><a href="icsm-charset-and-encoding.html">字符集及文字的编码</a></li>
-							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
+							<li><a href="math-irrational-numbers-natural-constant.html">自然常数及其计算</a></li>
 						</ol>
 					</section>
 					<section>
 						<h3>程序员的数学素养：编解码</h3>
 						<ol>
-							<li><a href="icsm-charset-and-encoding.html">字符集及文字的编码</a></li>
+							<li><a href="math-binary-arithmetic.html">二进制运算及数值的计算机表达</a></li>
+							<li><a href="math-arbitrary-precision-arithmetic.html">任意精度算术</a></li>
+							<li><a href="math-charset-and-text-encoding.html">字符集及文字的编码</a></li>
+							<li><a href="math-differential-encoding-huffman-coding.html">差分编码及哈夫曼码</a></li>
+							<li><a href="math-error-detection.html">编码的错误校验</a></li>
+							<li><a href="math-compression-and-decompression.html">数据的压缩和解压</a></li>
+							<li><a href="math-lossy-compression-and-decompression.html">有损压缩和解压</a></li>
+							<li><a href="math-digest-and-signature.html">数据的摘要及签名</a></li>
+							<li><a href="math-symmetric-encryption-and-decryption.html">对称加解密</a></li>
+							<li><a href="math-asymmetric-encryption-and-decryption.html">非对称加解密</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>程序员的数学素养：离散数学结构</h3>
+						<ol>
+							<li><a href="math-graphy-theory.html">图论基础</a></li>
+							<li><a href="math-finite-state-machine.html">有限状态机</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>程序员的数学素养：其他</h3>
+						<ol>
+							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
 							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
 						</ol>
 					</section>
