--- a/slides/index.html
+++ b/slides/index.html
@@ -95,7 +95,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员的数学素养：计算篇</h3>
+						<h3>程序员/信奥生的数学素养课：数系及计算</h3>
 						<ol>
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
@@ -110,13 +110,13 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员的数学素养：编解码</h3>
+						<h3>程序员/信奥生的数学素养课：编解码</h3>
 						<ol>
 							<li><a href="math-binary-arithmetic.html">二进制运算及数值的计算机表达</a></li>
 							<li><a href="math-arbitrary-precision-arithmetic.html">任意精度算术</a></li>
 							<li><a href="math-charset-and-text-encoding.html">字符集及文字的编码</a></li>
 							<li><a href="math-differential-encoding-huffman-coding.html">差分编码及哈夫曼码</a></li>
-							<li><a href="math-error-detection.html">编码的错误校验</a></li>
+							<li><a href="math-error-detection.html">二进制数据的编解码及错误校验</a></li>
 							<li><a href="math-compression-and-decompression.html">数据的压缩和解压</a></li>
 							<li><a href="math-lossy-compression-and-decompression.html">有损压缩和解压</a></li>
 							<li><a href="math-digest-and-signature.html">数据的摘要及签名</a></li>
@@ -125,14 +125,22 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员的数学素养：离散数学结构</h3>
+						<h3>程序员/信奥生的数学素养课：离散数学结构</h3>
 						<ol>
-							<li><a href="math-graphy-theory.html">图论基础</a></li>
-							<li><a href="math-finite-state-machine.html">有限状态机</a></li>
+							<li><a href="math-discrete-fundamentals.html">离散数学基础</a></li>
+							<li><a href="math-discrete-logic.html">逻辑</a></li>
+							<li><a href="math-discrete-counting.html">计数：排列、组合及概率</a></li>
+							<li><a href="math-discrete-relation-and-digraphs.html">关系及有向图</a></li>
+							<li><a href="math-discrete-functions.html">函数</a></li>
+							<li><a href="math-discrete-graphy-theory.html">图论基础</a></li>
+							<li><a href="math-discrete-order-relations-structures.html">有序关系及结构</a></li>
+							<li><a href="math-discrete-tree.html">树型结构</a></li>
+							<li><a href="math-discrete-semigroups-and-groups.html">半群和群</a></li>
+							<li><a href="math-discrete-languages-and-finite-state-machine.html">语言和有限状态机</a></li>
 						</ol>
 					</section>
 					<section>
-						<h3>程序员的数学素养：其他</h3>
+						<h3>程序员/信奥生的数学素养课：其他主题</h3>
 						<ol>
 							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
 							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
