--- a/slides/math-primes.html
+++ b/slides/math-primes.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>程序员的数学素养 - 质数：质数的判定以及合数的质数分解</title>
+		<title>程序员的数学素养 - 质数的有趣性质及质数定理</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -14,11 +14,11 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">质数：质数的判定以及合数的质数分解</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">质数的有趣性质及质数定理</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides">
-				<section data-markdown="gitlab/math-primes.html.md"
+				<section data-markdown="gitlab/math-primes.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
