new slide for math: math-number-theory

--- a/slides/index.html
+++ b/slides/index.html
@@ -101,6 +101,7 @@
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
 							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
 							<li><a href="math-primes.html">质数的有趣性质及初等数论四大定理</a></li>
+							<li><a href="math-number-theory.html">初等数论四大定理的证明</a></li>
 							<li><a href="math-calculus.html">微积分基础</a></li>
 							<li><a href="math-infinite-series.html">无穷级数</a></li>
 							<li><a href="math-algebraic-irrational-numbers.html">代数无理数的计算</a></li>
