update: cpp-quick-start.md

--- a/slides/index.html
+++ b/slides/index.html
@@ -29,7 +29,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>AI 筑基班</h3>
+						<h3>Python 实战班</h3>
 						<ol>
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
