--- a/slides/index.html
+++ b/slides/index.html
@@ -106,23 +106,7 @@
 							<li><a href="math-infinite-series.html">无穷级数</a></li>
 							<li><a href="math-algebraic-irrational-numbers.html">代数无理数的计算</a></li>
 							<li><a href="math-golden-ratio-and-fibonacci-numbers.html">黄金分割比和斐波那契数列</a></li>
-							<li><a href="math-irrational-numbers-pi.html">圆周率及其计算</a></li>
-							<li><a href="math-irrational-numbers-natural-constant.html">自然常数及其计算</a></li>
-						</ol>
-					</section>
-					<section>
-						<h3>程序员/信奥生的数学素养课：编解码</h3>
-						<ol>
-							<li><a href="math-binary-arithmetic.html">二进制运算及数值的计算机表达</a></li>
-							<li><a href="math-arbitrary-precision-arithmetic.html">任意精度算术</a></li>
-							<li><a href="math-charset-and-text-encoding.html">字符集及文字的编码</a></li>
-							<li><a href="math-differential-encoding-huffman-coding.html">差分编码及哈夫曼码</a></li>
-							<li><a href="math-error-detection.html">二进制数据的编解码及错误校验</a></li>
-							<li><a href="math-compression-and-decompression.html">数据的压缩和解压</a></li>
-							<li><a href="math-lossy-compression-and-decompression.html">有损压缩和解压</a></li>
-							<li><a href="math-digest-and-signature.html">数据的摘要及签名</a></li>
-							<li><a href="math-symmetric-encryption-and-decryption.html">对称加解密</a></li>
-							<li><a href="math-asymmetric-encryption-and-decryption.html">非对称加解密</a></li>
+							<li><a href="math-irrational-numbers-pi-and-e.html">圆周率、自然常数及其计算</a></li>
 						</ol>
 					</section>
 					<section>
@@ -138,6 +122,21 @@
 							<li><a href="math-discrete-tree.html">树型结构</a></li>
 							<li><a href="math-discrete-semigroups-and-groups.html">半群和群</a></li>
 							<li><a href="math-discrete-languages-and-finite-state-machine.html">语言和有限状态机</a></li>
+						</ol>
+					</section>
+					<section>
+						<h3>程序员/信奥生的数学素养课：编解码</h3>
+						<ol>
+							<li><a href="math-binary-arithmetic.html">二进制运算及数值的计算机表达</a></li>
+							<li><a href="math-arbitrary-precision-arithmetic.html">任意精度算术</a></li>
+							<li><a href="math-charset-and-text-encoding.html">字符集及文字的编码</a></li>
+							<li><a href="math-differential-encoding-huffman-coding.html">差分编码及哈夫曼码</a></li>
+							<li><a href="math-error-detection.html">二进制数据的编解码及错误校验</a></li>
+							<li><a href="math-compression-and-decompression.html">数据的压缩和解压</a></li>
+							<li><a href="math-lossy-compression-and-decompression.html">有损压缩和解压</a></li>
+							<li><a href="math-digest-and-signature.html">数据的摘要及签名</a></li>
+							<li><a href="math-symmetric-encryption-and-decryption.html">对称加解密</a></li>
+							<li><a href="math-asymmetric-encryption-and-decryption.html">非对称加解密</a></li>
 						</ol>
 					</section>
 					<section>
