--- a/slides/math-irrational-numbers-pi-and-e.html
+++ b/slides/math-irrational-numbers-pi-and-e.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>程序员的数学素养 - 无理数：计算圆周率的若干种方法</title>
+		<title>程序员的数学素养 - 圆周率、自然常数及其计算</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -14,11 +14,11 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">无理数：计算圆周率的若干种方法</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">圆周率、自然常数及其计算</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides">
-				<section data-markdown="gitlab/math-irrational-numbers-pi.md"
+				<section data-markdown="gitlab/math-irrational-numbers-pi-and-e.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
