--- a/slides/cpp-class-template-and-stl.html
+++ b/slides/cpp-class-template-and-stl.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>面向十岁及以上学生的编程实战系列课程：C++ 面向对象编程</title>
+		<title>面向十岁及以上学生的编程实战系列课程：C++ 类、模板及 STL</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -14,11 +14,11 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">C++ 面向对象编程</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">C++ 类、模板及 STL</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<div class="slides">
-				<section data-markdown="gitlab/cpp-class-and-oop.md"
+				<section data-markdown="gitlab/cpp-class-template-and-stl.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
