--- a/slides/index.html
+++ b/slides/index.html
@@ -58,10 +58,10 @@
 						<ol>
 							<li><a href="cpp-quick-start.html">C++ 快速入门</a></li>
 							<li><a href="cpp-flow-control.html">C++ 流程控制</a></li>
-							<li><a href="cpp-data-types.html">C++ 数据类型</a></li>
-							<li><a href="cpp-class-and-oop.html">C++ 面向对象编程</a></li>
-							<li><a href="cpp-project.html">C++ 大作业及相关知识点</a></li>
-							<li><a href="cpp-project-coaching.html">C++ 大作业辅导</a></li>
+							<li><a href="cpp-data-types.html">C++ 数据类型（上）</a></li>
+							<li><a href="cpp-data-types-more.html">C++ 数据类型（下）</a></li>
+							<li><a href="cpp-class-template-and-stl.html">C++ 类、模板和 STL</a></li>
+							<li><a href="cpp-arbitrary-precision-arithmetic.html">任意精度计算的 C++ 实现</a></li>
 						</ol>
 					</section>
 					<section>
