--- a/slides/index.html
+++ b/slides/index.html
@@ -36,7 +36,7 @@
 							<li><a href="cpp-data-types.html">C++ 数据类型（上）</a></li>
 							<li><a href="cpp-data-types-more.html">C++ 数据类型（下）</a></li>
 							<li><a href="cpp-class-template-and-stl.html">C++ 类、模板和 STL</a></li>
-							<li><a href="cpp-arbitrary-precision-arithmetic.html">任意精度计算的 C++ 实现</a></li>
+							<li><a href="cpp-arbitrary-precision-arithmetic.html">任意精度算术的 C++ 实现</a></li>
 						</ol>
 					</section>
 					<section>
