--- a/slides/index.html
+++ b/slides/index.html
@@ -78,7 +78,7 @@
 							<li><a href="math-primes.html">质数的有趣性质及初等数论四大定理</a></li>
 							<li><a href="math-number-theory.html">初等数论主要定理及其应用</a></li>
 							<li><a href="math-calculus.html">微积分基础</a></li>
-							<li><a href="math-infinite-series.html">无穷级数</a></li>
+							<li><a href="math-infinite-series.html">中值定理、泰勒公式及无穷级数</a></li>
 							<li><a href="math-algebraic-irrational-numbers.html">代数无理数的计算</a></li>
 							<li><a href="math-golden-ratio-and-fibonacci-numbers.html">黄金分割比和斐波那契数列</a></li>
 							<li><a href="math-irrational-numbers-pi-and-e.html">圆周率、自然常数及其计算</a></li>
