--- a/slides/index.html
+++ b/slides/index.html
@@ -46,12 +46,12 @@
 							<li><a href="noijunior-sort-algorithms.html">排序算法</a></li>
 							<li><a href="noijunior-linear-data-structures.html">线性数据结构</a></li>
 							<li><a href="noijunior-tree-data-structures.html">树型数据结构</a></li>
+							<li><a href="noijunior-midterm-project.html">中期大作业</a></li>
 							<li><a href="noijunior-search-algorithms.html">搜索算法</a></li>
-							<li><a href="noijunior-midterm-project.html">中期大作业：四则运算解析器</a></li>
 							<li><a href="noijunior-graph-and-graph-theory.html">图及图论算法</a></li>
 							<li><a href="noijunior-other-data-structures.html">其他算法和数据结构</a></li>
 							<li><a href="noijunior-csp-exercises.html">CSP-J 真题讲解</a></li>
-							<li><a href="noijunior-term-project.html">结业大作业：Bigint 类的优化及 JSON 解析器</a></li>
+							<li><a href="noijunior-term-project.html">结业大作业</a></li>
 						</ol>
 					</section>
 					<section>
@@ -60,13 +60,13 @@
 							<li><a href="noisenior-cpp-advanced-features.html">C++ 编程语言的高级特性</a></li>
 							<li><a href="noisenior-string-algorithms.html">字符串相关算法</a></li>
 							<li><a href="noisenior-memory-management.html">通用操作系统的内存管理</a></li>
-							<li><a href="noisenior-tree-data-structures.html">树型数据结构</a></li>
-							<li><a href="noisenior-midterm-project.html">中期大作业：正则表达式的解析及匹配</a></li>
-							<li><a href="noisenior-search-algorithms.html">搜索算法</a></li>
+							<li><a href="noisenior-tree-data-structures.html">高级树型数据结构</a></li>
+							<li><a href="noisenior-midterm-project.html">中期大作业</a></li>
+							<li><a href="noisenior-search-algorithms.html">高级搜索算法</a></li>
 							<li><a href="noisenior-dynamic-programming.html">动态规划</a></li>
 							<li><a href="noisenior-other-theories.html">其他理论知识</a></li>
 							<li><a href="noisenior-csp-exercises.html">CSP-S 真题讲解</a></li>
-							<li><a href="noisenior-term-project.html">结业大作业：Lua 或简化的 Python 解释器</a></li>
+							<li><a href="noisenior-term-project.html">结业大作业</a></li>
 						</ol>
 					</section>
 					<section>
