--- a/slides/index.html
+++ b/slides/index.html
@@ -80,6 +80,12 @@
 						</ol>
 					</section>
 					<section>
+						<h3>数学和程序的完美结合</h3>
+						<ol>
+							<li><a href="classical-programming-problems.html">经典编程题</a></li>
+						</ol>
+					</section>
+					<section>
 						<h3>程序员/信奥生的数学素养课：数系及计算</h3>
 						<ol>
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
@@ -127,6 +133,7 @@
 					<section>
 						<h3>程序员/信奥生的数学素养课：其他主题</h3>
 						<ol>
+							<li><a href="classical-programming-problems.html">经典编程题</a></li>
 							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
 							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
 						</ol>
