--- a/slides/index.html
+++ b/slides/index.html
@@ -52,7 +52,7 @@
 					<section>
 						<h3>信奥初级班</h3>
 						<ol>
-							<li><a href="noijunior-basic-algorithms.html">基础算法</a></li>
+							<li><a href="noijunior-basic-algorithms.html">基础算法和基础数据结构</a></li>
 							<li><a href="noijunior-sort-algorithms.html">排序算法</a></li>
 							<li><a href="noijunior-linear-data-structures.html">线性数据结构</a></li>
 							<li><a href="noijunior-tree-data-structures.html">树型数据结构</a></li>
