--- a/slides/index.html
+++ b/slides/index.html
@@ -95,7 +95,7 @@
 							<li><a href="math-number-theory.html">初等数论主要定理及其应用</a></li>
 							<li><a href="math-calculus.html">微积分基础</a></li>
 							<li><a href="math-preliminary-applications-of-caculus.html">微积分的初步应用</a></li>
-							<li><a href="math-algebraic-irrational-numbers.html">代数无理数的计算</a></li>
+							<li><a href="math-function-approximation-method.html">函数逼近法</a></li>
 							<li><a href="math-golden-ratio-and-fibonacci-numbers.html">黄金分割比和斐波那契数列</a></li>
 							<li><a href="math-irrational-numbers-pi-and-e.html">圆周率、自然常数及其计算</a></li>
 						</ol>
