--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -49,7 +49,7 @@
 				hash: true,
 				slideNumber: true,
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath.KaTeX ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			}).then(() => initCodeCopy());
 		</script>
 	</body>
