--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -6,7 +6,7 @@
 		<title>程序员的数学素养 - 函数逼近法</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/solarized.css">
+		<link rel="stylesheet" href="/dist/theme/dracula.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
