--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -46,6 +46,7 @@
 				width: 1920,
 				height: 1080,
 				margin: 0.04,
+				center: false,
 				hash: true,
 				slideNumber: true,
 				// Learn about plugins: https://revealjs.com/plugins/
