--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -47,6 +47,7 @@
 				height: 1080,
 				margin: 0.05,
 				center: false,
+				disableLayout: true,
 				hash: true,
 				slideNumber: true,
 				// Learn about plugins: https://revealjs.com/plugins/
