--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -22,7 +22,7 @@
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
-						 data-charset="utf-8">
+						 data-charset="utf-8" style="text-align: left; margin: 1em auto;">
 				</section>
 				<section id="grand-finale">
 					<h2>扫一扫</h2>
@@ -45,7 +45,7 @@
 			Reveal.initialize({
 				width: 1920,
 				height: 1080,
-				margin: 0.05,
+				margin: 0.02,
 				center: false,
 				hash: true,
 				slideNumber: true,
