--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -22,9 +22,9 @@
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
-						 data-charset="utf-8" style="text-align: left; margin: 1em auto;">
+						 data-charset="utf-8" style="text-align: left; margin: 1em 0;">
 				</section>
-				<section id="grand-finale">
+				<section id="grand-finale" class="data-center">
 					<h2>扫一扫</h2>
 					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-channel-weiym.png">
 					<!-- img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-bilibili-space-coding-log.jpg" -->
