--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -14,17 +14,20 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">函数逼近法</a></p>
-				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
+				<p></p>
+				<p>
+					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">函数逼近法</a>
+					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
+				</p>
 			</header>
 			<div class="slides">
 				<section data-markdown="gitlab/math-function-approximation-method.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
-						 data-charset="utf-8" style="text-align: left; margin: 1em 0;">
+						 data-charset="utf-8" style="text-align: left">
 				</section>
-				<section id="grand-finale" style="margin: auto 50%;">
+				<section id="grand-finale" style="margin-top: 30%;">
 					<h2>扫一扫</h2>
 					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-channel-weiym.png">
 					<!-- img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-bilibili-space-coding-log.jpg" -->
