--- a/slides/math-function-approximation-method.html
+++ b/slides/math-function-approximation-method.html
@@ -16,7 +16,7 @@
 			<header class="mytitle">
 				<p></p>
 				<p>
-					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">函数逼近法</a>
+					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">函数逼近法</a> |
 					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
 				</p>
 			</header>
