--- a/slides/math-number-system.html
+++ b/slides/math-number-system.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>程序员的数学素养 - 数系：从自然数到复数</title>
+		<title>信息学的数学基础 - 数系：从自然数到复数</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/solarized.css">
+		<link rel="stylesheet" href="/dist/theme/dracula.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
@@ -14,17 +14,20 @@
 	<body>
 		<div class="reveal">
 			<header class="mytitle">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">数系：从自然数到复数</a></p>
-				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
+				<p></p>
+				<p>
+					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">数系：从自然数到复数</a> |
+					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
+				</p>
 			</header>
 			<div class="slides">
 				<section data-markdown="gitlab/math-number-system.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
 						 data-separator-notes="^Note:"
-						 data-charset="utf-8">
+						 data-charset="utf-8" style="text-align: left">
 				</section>
-				<section id="grand-finale">
+				<section id="grand-finale" style="margin-top: 10%;">
 					<h2>扫一扫</h2>
 					<img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-wechat-channel-weiym.png">
 					<!-- img class="r-frame" style="height:30vh;width:auto;" src="assets/qrcode-bilibili-space-coding-log.jpg" -->
@@ -36,19 +39,21 @@
 		<script src="/plugin/notes/notes.js"></script>
 		<script src="/plugin/markdown/markdown.js"></script>
 		<script src="/plugin/highlight/highlight.js"></script>
+		<script src="/plugin/math/math.js"></script>
 		<script src="/js/utils/code-copy.js"></script>
 		<script>
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: 1024,
-				height: 768,
-				margin: 0.04,
+				width: 1920,
+				height: 1080,
+				margin: 0.02,
+				center: false,
 				hash: true,
 				slideNumber: true,
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
 			}).then(() => initCodeCopy());
 		</script>
 	</body>
