--- a/slides/math-binary-arithmetic.html
+++ b/slides/math-binary-arithmetic.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>程序员的数学素养 - 二进制运算及实数的计算机表达</title>
+		<title>信息学的数学基础 - 二进制运算及实数的计算机表达</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
