--- a/slides/math-rational-numbers.html
+++ b/slides/math-rational-numbers.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>程序员的数学素养 - 有理数：如何找到任意有理数的最简分数表达</title>
+		<title>信息学的数学基础 - 有理数：如何找到任意有理数的最简分数表达</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
