--- a/slides/index.html
+++ b/slides/index.html
@@ -86,7 +86,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员/信奥生的数学素养课：数系及计算</h3>
+						<h3>信息学的数学基础：数系及计算</h3>
 						<ol>
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
@@ -101,7 +101,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员/信奥生的数学素养课：离散数学结构</h3>
+						<h3>信息学的数学基础：离散数学结构</h3>
 						<ol>
 							<li><a href="math-discrete-fundamentals.html">离散数学基础</a></li>
 							<li><a href="math-discrete-logic.html">逻辑</a></li>
@@ -116,7 +116,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员/信奥生的数学素养课：编解码</h3>
+						<h3>信息学的数学基础：编解码</h3>
 						<ol>
 							<li><a href="math-binary-arithmetic.html">二进制运算及数值的计算机表达</a></li>
 							<li><a href="math-arbitrary-precision-arithmetic.html">任意精度算术</a></li>
@@ -131,7 +131,7 @@
 						</ol>
 					</section>
 					<section>
-						<h3>程序员/信奥生的数学素养课：其他主题</h3>
+						<h3>信息学的数学基础：其他主题</h3>
 						<ol>
 							<li><a href="classical-programming-problems.html">经典编程题</a></li>
 							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
