--- a/slides/index.html
+++ b/slides/index.html
@@ -20,7 +20,7 @@
 			<div class="slides">
 				<section>
 					<section>
-						<h3>零基础普及班</h3>
+						<h3>零基础普及</h3>
 						<ol>
 							<li><a href="preparing-ubuntu-linux.html">准备开发环境</a></li>
 							<li><a href="using-linux-desktop-system.html">使用 Linux 桌面系统</a></li>
@@ -29,17 +29,17 @@
 						</ol>
 					</section>
 					<section>
-						<h3>Python 实战班</h3>
+						<h3>Python 实战</h3>
 						<ol>
 							<li><a href="python-flow-control.html">Python 流程控制</a></li>
 							<li><a href="python-data-types.html">Python 数据类型</a></li>
 							<li><a href="python-standard-library.html">Python 标准库</a></li>
-							<li><a href="python-comprehensive-exercise.html">Python 大作业</a></li>
-							<li><a href="python-project-coaching.html">Python 大作业辅导</a></li>
+							<li><a href="python-comprehensive-exercise.html">Python 综合练习</a></li>
+							<li><a href="python-project-coaching.html">Python 综合练习辅导</a></li>
 						</ol>
 					</section>
 					<section>
-						<h3>信奥筑基班</h3>
+						<h3>信奥筑基/C++ 编程语言</h3>
 						<ol>
 							<li><a href="cpp-quick-start.html">C++ 快速入门</a></li>
 							<li><a href="cpp-flow-control.html">C++ 流程控制</a></li>
@@ -50,39 +50,39 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信奥初级班</h3>
+						<h3>信奥初级/信息学算法和数据结构入门</h3>
 						<ol>
 							<li><a href="noijunior-basic-algorithms.html">基础算法和基础数据结构</a></li>
 							<li><a href="noijunior-sort-algorithms.html">排序算法</a></li>
 							<li><a href="noijunior-linear-data-structures.html">线性数据结构</a></li>
 							<li><a href="noijunior-tree-data-structures.html">树型数据结构</a></li>
-							<li><a href="noijunior-midterm-project.html">中期大作业</a></li>
+							<li><a href="noijunior-midterm-project.html">中期综合练习</a></li>
 							<li><a href="noijunior-search-algorithms.html">搜索算法</a></li>
 							<li><a href="noijunior-graph-and-graph-theory.html">图及图论算法</a></li>
 							<li><a href="noijunior-other-data-structures.html">其他算法和数据结构</a></li>
 							<li><a href="noijunior-csp-exercises.html">CSP-J 真题讲解</a></li>
-							<li><a href="noijunior-term-project.html">结业大作业</a></li>
+							<li><a href="noijunior-term-project.html">结业综合练习</a></li>
 						</ol>
 					</section>
 					<section>
-						<h3>信奥提高班</h3>
+						<h3>信奥提高/信息学算法和数据结构提高</h3>
 						<ol>
 							<li><a href="noisenior-cpp-advanced-features.html">C++ 编程语言的高级特性</a></li>
 							<li><a href="noisenior-string-algorithms.html">字符串相关算法</a></li>
 							<li><a href="noisenior-memory-management.html">通用操作系统的内存管理</a></li>
 							<li><a href="noisenior-tree-data-structures.html">高级树型数据结构</a></li>
-							<li><a href="noisenior-midterm-project.html">中期大作业</a></li>
+							<li><a href="noisenior-midterm-project.html">中期综合练习</a></li>
 							<li><a href="noisenior-search-algorithms.html">高级搜索算法</a></li>
 							<li><a href="noisenior-dynamic-programming.html">动态规划</a></li>
 							<li><a href="noisenior-other-theories.html">其他理论知识</a></li>
 							<li><a href="noisenior-csp-exercises.html">CSP-S 真题讲解</a></li>
-							<li><a href="noisenior-term-project.html">结业大作业</a></li>
+							<li><a href="noisenior-term-project.html">结业综合练习</a></li>
 						</ol>
 					</section>
 					<section>
 						<h3>数学和程序的完美结合</h3>
 						<ol>
-							<li><a href="classical-programming-problems.html">经典编程题</a></li>
+							<li><a href="classical-programming-problems-number-theory.html">经典编程题-数论相关</a></li>
 						</ol>
 					</section>
 					<section>
@@ -148,8 +148,8 @@
 							<li><a href="fullstack-web-programming-exercise.html">网页前端综合练习及专题辅导</a></li>
 							<li><a href="fullstack-collaborative-development-based-on-github.html">基于 Git 的协作式软件开发</a></li>
 							<li><a href="fullstack-open-source-ai-llm.html">开源 AI 大模型</a></li>
-							<li><a href="fullstack-project-design.html">大作业需求分析及架构设计</a></li>
-							<li><a href="fullstack-project-coaching.html">大作业专题辅导</a></li>
+							<li><a href="fullstack-project-design.html">实战项目需求分析及架构设计</a></li>
+							<li><a href="fullstack-project-coaching.html">实战项目专题辅导</a></li>
 							<li><a href="fullstack-deploying-and-operations.html">服务的部署和运维</a></li>
 						<ol>
 					</section>
