--- a/slides/index.html
+++ b/slides/index.html
@@ -91,7 +91,7 @@
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
 							<li><a href="math-integers.html">数论基础：整数的性质</a></li>
-							<li><a href="math-primes.html">质数的有趣性质及初等数论四大定理</a></li>
+							<li><a href="math-primes.html">质数的有趣性质及数论基础</a></li>
 							<li><a href="math-number-theory.html">初等数论主要定理及其应用</a></li>
 							<li><a href="math-calculus.html">微积分基础</a></li>
 							<li><a href="math-preliminary-applications-of-caculus.html">微积分的初步应用</a></li>
