--- a/slides/math-end-on-system.html
+++ b/slides/math-end-on-system.html
@@ -16,7 +16,8 @@
 			<header class="mytitle">
 				<p></p>
 				<p>
-					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">数系上的运算以及进制</a> |
+					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">第一页</a> |
+					<a href="/plzs/math-integers.html">下一讲</a> |
 					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
 				</p>
 			</header>
