--- a/slides/math-number-theory.html
+++ b/slides/math-number-theory.html
@@ -16,7 +16,8 @@
 			<header class="mytitle">
 				<p></p>
 				<p>
-					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">初等数论主要定理及其应用</a> |
+					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">第一页</a> |
+					<a href="/plzs/math-calculus">下一讲</a> |
 					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
 				</p>
 			</header>
