--- a/slides/math-primes.html
+++ b/slides/math-primes.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>信息学的数学基础 - 质数的有趣性质及初等数论四大定理</title>
+		<title>信息学的数学基础 - 质数的有趣性质及数论基础</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/dracula.css">
@@ -16,7 +16,8 @@
 			<header class="mytitle">
 				<p></p>
 				<p>
-					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">质数的有趣性质及初等数论四大定理</a> |
+					<a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">第一页</a> |
+					<a href="/plzs/math-number-theory.html">下一讲</a> |
 					<a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a>
 				</p>
 			</header>
