--- a/slides/math-irrational-numbers-pi-and-e.html
+++ b/slides/math-irrational-numbers-pi-and-e.html
@@ -6,7 +6,7 @@
 		<title>信息学的数学基础 - 圆周率、自然常数及其计算</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/dracula.css">
+		<link rel="stylesheet" href="/dist/theme/math-rose.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
