--- a/slides/math-calculus.html
+++ b/slides/math-calculus.html
@@ -6,7 +6,7 @@
 		<title>程序员/信奥生的数学素养 - 微积分基础</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/dracula.css">
+		<link rel="stylesheet" href="/dist/theme/math-rose.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
