--- a/slides/math-number-theory.html
+++ b/slides/math-number-theory.html
@@ -6,7 +6,7 @@
 		<title>信息学的数学基础 - 初等数论主要定理及其应用</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/dracula.css">
+		<link rel="stylesheet" href="/dist/theme/math-rose.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
