--- a/slides/classical-programming-problems-number-theory.html
+++ b/slides/classical-programming-problems-number-theory.html
@@ -6,7 +6,7 @@
 		<title>面向十岁及以上学生的编程实战系列课程：经典编程题（数论）</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/solarized.css">
+		<link rel="stylesheet" href="/dist/theme/math-rose.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
@@ -36,6 +36,7 @@
 		<script src="/plugin/notes/notes.js"></script>
 		<script src="/plugin/markdown/markdown.js"></script>
 		<script src="/plugin/highlight/highlight.js"></script>
+		<script src="/plugin/highlight/math.js"></script>
 		<script src="/js/utils/code-copy.js"></script>
 		<script>
 			// More info about initialization & config:
@@ -48,7 +49,7 @@
 				hash: true,
 				slideNumber: true,
 				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMath ]
 			}).then(() => initCodeCopy());
 		</script>
 	</body>
