--- a/slides/classical-programming-problems-number-theory.html
+++ b/slides/classical-programming-problems-number-theory.html
@@ -36,7 +36,7 @@
 		<script src="/plugin/notes/notes.js"></script>
 		<script src="/plugin/markdown/markdown.js"></script>
 		<script src="/plugin/highlight/highlight.js"></script>
-		<script src="/plugin/highlight/math.js"></script>
+		<script src="/plugin/math/math.js"></script>
 		<script src="/js/utils/code-copy.js"></script>
 		<script>
 			// More info about initialization & config:
