--- a/slides/classical-programming-problems-number-theory.html
+++ b/slides/classical-programming-problems-number-theory.html
@@ -6,7 +6,7 @@
 		<title>面向十岁及以上学生的编程实战系列课程：经典编程题（数论）</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
-		<link rel="stylesheet" href="/dist/theme/math-rose.css">
+		<link rel="stylesheet" href="/dist/theme/solarized.css">
 		<link rel="stylesheet" href="/css/global.css">
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="/plugin/highlight/monokai.css">
