--- a/slides/index.html
+++ b/slides/index.html
@@ -86,7 +86,8 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信息学的数学基础：数系及计算</h3>
+						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h4>数系及其运算</h4>
 						<ol>
 							<li><a href="math-number-system.html">数系——从自然数到复数</a></li>
 							<li><a href="math-end-on-system.html">数系上的运算和进制</a></li>
@@ -101,7 +102,8 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信息学的数学基础：离散数学结构</h3>
+						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h4>离散数学结构</h4>
 						<ol>
 							<li><a href="math-discrete-fundamentals.html">离散数学基础</a></li>
 							<li><a href="math-discrete-logic.html">逻辑</a></li>
@@ -116,7 +118,8 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信息学的数学基础：编解码</h3>
+						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h4>编解码</h4>
 						<ol>
 							<li><a href="math-binary-arithmetic.html">二进制运算及数值的计算机表达</a></li>
 							<li><a href="math-arbitrary-precision-arithmetic.html">任意精度算术</a></li>
@@ -131,9 +134,9 @@
 						</ol>
 					</section>
 					<section>
-						<h3>信息学的数学基础：其他主题</h3>
+						<h3>信息学的数学基础/程序员的数学素养课</h3>
+						<h4>其他主题</h4>
 						<ol>
-							<li><a href="classical-programming-problems.html">经典编程题</a></li>
 							<li><a href="math-pythagorean-theorem.html">勾股定理的几种证明</a></li>
 							<li><a href="icsm-other-programming-languages.html">其他编程语言长什么样？</a></li>
 						</ol>
@@ -151,6 +154,12 @@
 							<li><a href="fullstack-project-design.html">实战项目需求分析及架构设计</a></li>
 							<li><a href="fullstack-project-coaching.html">实战项目专题辅导</a></li>
 							<li><a href="fullstack-deploying-and-operations.html">服务的部署和运维</a></li>
+						<ol>
+					</section>
+					<section>
+						<h3>杂项</h3>
+						<ol>
+							<li><a href="misc-what-is-informatics.html">什么是信息学</a></li>
 						<ol>
 					</section>
 					<section>
