--- a/slides/classical-programming-problems-number-theory.html
+++ b/slides/classical-programming-problems-number-theory.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">经典编程题（数论）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides">
+			<div class="slides move-left">
 				<section data-markdown="gitlab/classical-programming-problems-number-theory.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
