--- a/slides/index.html
+++ b/slides/index.html
@@ -83,6 +83,8 @@
 						<h3>数学和程序的完美结合</h3>
 						<ol>
 							<li><a href="classical-programming-problems-number-theory.html">经典编程题-数论相关</a></li>
+							<li><a href="exam-explanation-cpp-ability-test.html">C++ 编程语言能力测试</a></li>
+							<li><a href="exam-explanation-csp-j-2023.html">CSP-J 2023 真题</a></li>
 						</ol>
 					</section>
 					<section>
